unpackaged/main/default/objects/Pedido__c/fields/Aprobado_Por__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Aprobado Por)</relationshipLabel>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>