unpackaged/main/default/objects/Pedido__c/fields/Auth_Next_Par_Num__c.field-meta.xml
<CustomField>
    <fullName>Auth_Next_Par_Num__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Autorizacion Sig # Particion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>