unpackaged/main/default/objects/Pedido__c/fields/Autorizado_Por__c.field-meta.xml
<CustomField>
    <fullName>Autorizado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autorizado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos (Autorizado Por)</relationshipLabel>
    <relationshipName>Pedidos2</relationshipName>
    <type>Lookup</type>
</CustomField>