unpackaged/main/default/objects/Pedido__c/fields/Creado_Por__c.field-meta.xml
<CustomField>
    <fullName>Creado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>