unpackaged/main/default/objects/Pedido__c/fields/Es_Programa__c.field-meta.xml
<CustomField>
    <fullName>Es_Programa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Programa?</label>
    <type>Checkbox</type>
</CustomField>