unpackaged/main/default/objects/Pedido__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Procesando</fullName>
            </value>
            <value>
                <fullName>Verificando Disponibilidad</fullName>
            </value>
            <value>
                <fullName>Preparando Envío</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>En Firma</fullName>
            </value>
            <value>
                <fullName>Transferido</fullName>
            </value>
            <value>
                <fullName>Recibido</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Recibido Parcial</fullName>
            </value>
            <value>
                <fullName>Ver Detalles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>