unpackaged/main/default/objects/Pedido__c/fields/Fecha_Revision_Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Revision_Delegacion__c</fullName>
    <label>Fecha Revisión Delegación</label>
    <type>DateTime</type>
</CustomField>