unpackaged/main/default/objects/Pedido__c/fields/Fecha_Revision_SICORA__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Revision_SICORA__c</fullName>
    <label>Fecha Revisión SICORA</label>
    <type>DateTime</type>
</CustomField>