unpackaged/main/default/objects/Pedido__c/fields/Folio_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Pedido__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Folio de Pedido</label>
    <type>AutoNumber</type>
</CustomField>