unpackaged/main/default/objects/Pedido__c/fields/Justificacion__c.field-meta.xml
<CustomField>
    <fullName>Justificacion__c</fullName>
    <label>Justificación</label>
    <type>TextArea</type>
</CustomField>