unpackaged/main/default/objects/Pedido__c/fields/Mostrar_Autorizacion__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Autorizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Autorización?</label>
    <type>Checkbox</type>
</CustomField>