unpackaged/main/default/objects/Pedido__c/fields/Pedido_Original__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Original</label>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>