unpackaged/main/default/objects/Pedido__c/fields/Tipo_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pedido__c</fullName>
    <label>Tipo de Pedido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordinario</fullName>
            </value>
            <value>
                <fullName>Extraordinario</fullName>
            </value>
            <value>
                <fullName>Programa</fullName>
            </value>
            <value>
                <fullName>Replaneación</fullName>
            </value>
            <value>
                <fullName>Soporte de Vida</fullName>
            </value>
            <value>
                <fullName>Urgencia Médica</fullName>
            </value>
            <value>
                <fullName>Emergencia Sanitaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>