unpackaged/main/default/objects/Pedido__c/fields/Total_de_Piezas__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Piezas__c</fullName>
    <label>Total de Piezas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>