unpackaged/main/default/objects/Pedido__c/fields/UMU__c.field-meta.xml
<CustomField>
    <fullName>UMU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>