unpackaged/main/default/objects/Pedido__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Es_Programa__c</columns>
    <columns>ID_de_Pedido__c</columns>
    <columns>Tipo_de_Pedido__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Creado_Por__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>